enter message box changed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="8">
+        android:layout_height="wrap_content"
+        android:layout_weight="9">
 
         <androidx.recyclerview.widget.RecyclerView
 
@@ -24,14 +24,15 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
 
         <LinearLayout
             android:id="@+id/linear1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@id/linear2"
             android:weightSum="10">
@@ -41,24 +42,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
-                android:hint="Enter message "
-                android:inputType="text" />
+                android:background="@drawable/enter_message"
+                android:hint="Enter message User 1"
+                android:inputType="text"
+                android:layout_margin="4dp"
+                android:padding="12dp" />
 
             <Button
                 android:id="@+id/send1"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:text="Send" />
         </LinearLayout>
 
         <LinearLayout
 
             android:id="@+id/linear2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
             android:weightSum="10">
 
             <EditText
@@ -66,8 +69,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
-                android:hint="Enter message "
-                android:inputType="text" />
+                android:background="@drawable/enter_message"
+                android:hint="Enter message User 2"
+                android:inputType="text"
+                android:layout_margin="4dp"
+                android:padding="12dp" />
 
             <Button
                 android:id="@+id/send2"
